<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/lizard_layout"
        style="@style/LayoutParent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/frame"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_gravity="center"
            android:src="@drawable/lizard" />

        <TextView
            style="@style/LayoutParent"
            android:gravity="center"
            android:text="@string/lizard"
            android:textSize="18sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/a_insects"
            android:layout_marginLeft="16dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/b_chocolate"
            android:layout_marginLeft="16dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lizard_answer"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>


    </LinearLayout>
</FrameLayout>